--- a/interface/index.html
+++ b/interface/index.html
@@ -45,6 +45,14 @@
         <div class="succesedMint-textBlock"></div>
     </div>
     <div class="button button-bridge">Bridge to BASE</div>
+    <div class="succesedBridge tx-hidden">
+        <div class="succesedBridge-textBlock">I could take up to 1 minute...
+            <div class="loader"></div>
+        </div>
+        <!-- <div class="succesedBridge-textBlock">I could take up to 1 minute...<br>Check minted NFT on BASE <a
+                target="_blank">here</a>
+        </div> -->
+    </div>
 
     <script src="index.js"></script>
 </body>
